--- a/serverless.yml
+++ b/serverless.yml
@@ -20,3 +20,15 @@ functions:
       - httpApi:
           path: /days
           method: get
+plugins:
+  - serverless-python-requirements
+ 
+custom:
+  pythonRequirements:
+    dockerizePip: non-linux
+    
+
+package:
+  patterns:
+    - '!node_modules/**'
+    - '!venv/**'
